--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,14 +1,28 @@
-<div class= "card"><h1><%= @cocktail.name%></h1>
-<% @doses = @cocktail.doses %>
-<ul><% @doses.each do |dose| %>
-  <li>
-    <%= dose.ingredient.name %>, <%= dose.description%>
-    <%=link_to "Delete dose", destroy_dose_path(dose),
-          method: :delete,
-      data: { confirm: "Are you sure?" }, class:"bta" %>
-  </li>
-<%end%>
-</ul>
+<div id="banner" class="col-xs-12 col-sm-12 col-md-12>"
+  style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
+                   url('<%= cl_image_path @cocktail.photo, height: 300, width: 600, crop: :fill %>')">
+  <h1><%= @cocktail.name.upcase %>
+  . </h1>
 </div>
-<p> <%=link_to "Add a dose", new_dose_path, class:"btd" %></p>
-<p> <%=link_to "Back to cocktails", cocktails_path, class:"btd" %></p>
+
+<div class= "card-description">
+  <h2>INGREDIENTS</h2>
+<% @doses = @cocktail.doses %>
+    <ul><% @doses.each do |dose| %>
+      <li>
+        <%= dose.ingredient.name %>, <%= dose.description%>
+        <%=link_to "Delete dose", destroy_dose_path(dose),
+              method: :delete,
+          data: { confirm: "Are you sure?" }, class:"bta" %>
+      </li>
+    <%end%>
+    </ul>
+  <p> <%=link_to "Add a dose", new_dose_path, class:"btd" %></p>
+
+</div>
+
+<div id="footer" class="col-xs-12 col-sm-12 col-md-12>"
+  style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
+                   url('<%= cl_image_path @cocktail.photo, height: 300, width: 600, crop: :fill %>')">
+ <h2><%=link_to "COCKTAIL LIST", cocktails_path, class:"back" %><h2>
+</div>
