--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,6 +1,13 @@
-<h1>Dose :</h1>
+<div class="form"><h2>ADD <br> A DOSE.</h2>
 <%= simple_form_for @dose do |f| %>
-<%= f.input :description %>
+<%= f.input :description, wrapper_html: { class: 'input' } %>
 <%= f.association :ingredient, collection: Ingredient.all.order(:name), prompt: "Select an ingredient" %>
-<%= f.submit "send", class: "btd" %>
+<%= f.submit "send", wrapper_html: { class: 'btd' } %>
 <% end %>
+</div>
+
+<div id="footer" class="col-xs-12 col-sm-12 col-md-12>"
+  style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
+                   url('https://res.cloudinary.com/dytx1bbld/image/upload/v1565343398/rhn9frdzkvmloobcyp1y.jpg')">
+ <h2><%=link_to "BACK TO COCKTAIL", cocktail_path, class:"back" %><h2>
+</div>
