--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -79,7 +79,7 @@ $lgb: #2F343B;
   letter-spacing: 2px;
   padding: 20px 30px;
   border-radius: 5px;
-  box-shadow: 5px 5px 10px $grey;
+  box-shadow: 5px 5px 10px $c1;
   background: cover;
   margin: 10px auto;
 }
