--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -7,7 +7,7 @@ $grey: #303339;
   padding: 10px;
   color: white;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
-  // position: fixed;
+  position: fixed;
   margin-top: 10px;
   bottom: 0px;
   z-index: 10;
