method to delete cocktails ACTIVATED!

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -21,8 +21,15 @@
 
 </div>
 <br><br><br>
-<div id="footer" class="col-xs-12 col-sm-12 col-md-12>"
+<div id="footer_up" class="col-xs-12 col-sm-12 col-md-12>"
   style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
                    url('<%= cl_image_path @cocktail.photo, height: 300, width: 600, crop: :fill %>')">
- <h2><%=link_to "COCKTAIL LIST", cocktails_path, class:"back" %><h2>
+ <h2><%=link_to "BACK TO COCKTAIL LIST", cocktails_path, class:"back" %><h2>
+</div>
+<div id="footer" class="col-xs-12 col-sm-12 col-md-12>"
+  style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
+                   url('https://res.cloudinary.com/dytx1bbld/image/upload/v1565343398/rhn9frdzkvmloobcyp1y.jpg')">
+ <h2><%=link_to "DELETE COCKTAIL", destroy_cocktail_path(@cocktail),
+          method: :delete,
+          data: { confirm: "Are you sure?" }, class:"back" %><h2>
 </div>
