--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -17,3 +17,21 @@ $grey: #303339;
     letter-spacing: 5px;
   }
 }
+
+#footer_up {
+  height: 10vh;
+  background-size: cover;
+  text-align: center;
+  padding: 10px;
+  color: white;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  position: fixed;
+  margin-top: 10px;
+  bottom: 10vh;
+  z-index: 10;
+    h2 {
+    font-family: impact;
+    font-style: bold;
+    letter-spacing: 5px;
+  }
+}
