--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -8,6 +8,8 @@
 
 <div id="footer" class="col-xs-12 col-sm-12 col-md-12>"
   style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
-                   url('https://res.cloudinary.com/dytx1bbld/image/upload/v1565343398/rhn9frdzkvmloobcyp1y.jpg')">
- <h2><%=link_to "BACK TO COCKTAIL", cocktail_path, class:"back" %><h2>
+  url('https://res.cloudinary.com/dytx1bbld/image/upload/v1565343398/rhn9frdzkvmloobcyp1y.jpg')">
+  <h2>
+    <%=link_to "BACK TO COCKTAIL", cocktail_path, class:"back" %>
+  <h2>
 </div>
