--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -7,25 +7,26 @@ $lgb: #2F343B;
   background-size: cover;
   background-position: center;
   height: 250px;
+  width: 96%;
   border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
   display: flex;
   align-items: center;
   justify-content: space-around;
   color: white;
   margin: 10px auto;
-  padding: 20px;
+  padding: 10px;
   overflow:scroll;
 }
 
 .card-description {
-
   width: 50%;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
   text-align: center;
   color: $grey;
   margin: 20px auto;
+  margin-bottom: 180px;
   padding: 20px;
   h2 {
     font-family: impact;
@@ -33,15 +34,15 @@ $lgb: #2F343B;
   }
 }
 
-  li, ul {
-    margin-left: 0px;
-    list-style: none;
-    padding-left: 0px;
-    text-align: center;
-  }
+li, ul {
+  margin-left: 0px;
+  list-style: none;
+  padding-left: 0px;
+  text-align: center;
+}
 
 .card-category {
-  width: 80%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-around;
