--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -2,13 +2,14 @@ $grey: #303339;
 
 #footer {
   height: 10vh;
+  width: 100vw;
   background-size: cover;
   text-align: center;
   padding: 10px;
   color: white;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
   position: fixed;
-  margin-top: 10px;
+  margin-top: 100px;
   bottom: 0px;
   z-index: 10;
     h2 {
@@ -19,6 +20,7 @@ $grey: #303339;
 }
 
 #footer_up {
+  width: 100vw;
   height: 10vh;
   background-size: cover;
   text-align: center;
