--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,13 @@
 // Specific CSS for your home-page
+.title {
+  margin-bottom: 20px;
+}
+
+.homewrap {
+  width: 80%;
+  margin: 10px auto;
+  margin-bottom: 100px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 2px;
+}
