typed.js for index

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -32,4 +32,15 @@ $lgb: #2F343B;
     color: $gb;
     margin-left: 10%;
     line-height: 100%;
+    margin-bottom: 0px;
+    margin-top: 20px;
+    h1 {
+      margin-bottom: 0px;
+    }
+}
+
+
+#banner-typed-text {
+  height: 50vh;
+  width: 50vw
 }
