--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="title">YOUR <br> COCKTAILS.</h1>
+<h1 class="title" id="banner-typed-text"></h1>
 
 <div class="homewrap">
   <% @cocktails.each do |cocktail| %>
