--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,7 +6,7 @@
 .homewrap {
   width: 80%;
   margin: 10px auto;
-  margin-bottom: 100px;
+  margin-bottom: 7rem;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 2px;
