--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -4,7 +4,7 @@ $lgb: #2F343B;
 
 
 #banner {
-  height: 55vh;
+  height: 40vw;
   background-size: cover;
   text-align: left;
   display: flex;
@@ -12,37 +12,45 @@ $lgb: #2F343B;
   align-items: center;
   color: white;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
-  // position: fixed;
+  position: relative;
   z-index: 10;
   display: flex;
   h1 {
-    font-size: 16rem;
+    font-size: 20vw;
     font-family: impact;
     font-style: bold;
     align-self: flex-end;
+    margin: 0px;
+    position: relative;
+    bottom: 1vh;
+    line-height: 88%;
   }
-  // padding-left: 10%;
-  line-height: 10%;
-  letter-spacing: 10px;
+  // line-height: 10%;
+  letter-spacing: 5px;
   overflow: hidden;
 }
 
 .title {
-    font-size: 16rem;
     font-family: impact;
     font-style: bold;
     color: $gb;
-    margin-left: 10%;
-    line-height: 100%;
+    text-align: center;
+    padding: 5vw;
+    line-height: 88%;
     margin-bottom: 0px;
     margin-top: 20px;
     h1 {
       margin-bottom: 0px;
+      font-size: 20vw;
     }
 }
 
 
+
 #banner-typed-text {
-  height: 32rem;
-  width: 50vw
-}
+    height: 40vw;
+    width: 50vw;
+    margin-bottom: 0px;
+    font-size: 20vw;
+  }
+
