--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,39 +1,40 @@
 $grey: #303339;
 
 #footer {
-  height: 10vh;
+  height: 6vmin;
   width: 100vw;
   background-size: cover;
   text-align: center;
-  padding: 10px;
+  // padding: 10px;
   color: white;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
   position: fixed;
-  margin-top: 100px;
   bottom: 0px;
   z-index: 10;
     h2 {
     font-family: impact;
     font-style: bold;
     letter-spacing: 5px;
+    font-size: 5vmin;
+    margin: 0px;
   }
 }
 
 #footer_up {
   width: 100vw;
-  height: 10vh;
+  height: 6vmin;
   background-size: cover;
   text-align: center;
-  padding: 10px;
+  // padding: 5px;
   color: white;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
   position: fixed;
-  margin-top: 10px;
-  bottom: 10vh;
+  bottom: 6vmin;
   z-index: 10;
     h2 {
     font-family: impact;
     font-style: bold;
     letter-spacing: 5px;
+    font-size: 5vmin;
   }
 }
