--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,8 +1,10 @@
 <h1 class="title" id="banner-typed-text"></h1>
 
-<div class="homewrap">
+<!-- <div class="homewrap"> -->
+  <div class="container">
+  <div class="row">
   <% @cocktails.each do |cocktail| %>
-    <div class="card"
+    <div class="card col-sm-10 col-md-5 col-lg-4 .col-auto"
       style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
       url('<%= cl_image_path cocktail.photo, height: 200, width: 300, crop: :fill %>')">
       <h3>
@@ -10,6 +12,7 @@
       </h3>
     </div>
   <%end%>
+</div>
 </div>
 
 <div id="footer"
