--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -16,18 +16,20 @@ $lgb: #2F343B;
 }
 
 .btd {
-  color: $gb ;
+  width: 100%;
+  color: white ;
+  text-align: center;
   padding: 5px 15px;
   border-radius: 5px;
-  background: white;
+  background: black;
   box-shadow: 2px 2px 10px $c1;
 }
 
 .btd:hover {
   opacity: 1;
   text-decoration: none;
-  background: $c1;
-  color: white;
+  background: white;
+  color: black;
 }
 
 .bta {
