--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -4,7 +4,7 @@ $c1: #DCDCDC;
 $lgb: #2F343B;
 
 .form {
-  width: 70%;
+  width: 400px;
   background: white;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
@@ -12,11 +12,37 @@ $lgb: #2F343B;
   color: $grey;
   margin:  50px auto;
   padding: 20px;
-  h2 {
+  h1 {
   font-family: impact;
   letter-spacing: 2px;
   text-align: left;
   overflow: hidden;
   }
+}
+
+
+.form-control {
+  box-shadow: 2px 2px 10px gray;
+  color: gray;
+}
+
+.form-control:focus {
+  box-shadow: 2px 2px 10px black !important;
+  color: gray;
+  outline: none;
+}
+
+.form-group {
+  margin: 10px;
+}
+
+.formy {
+  display:flex;
+  justify-content: center;
+  width: 600px;
+  font-family: 'helvetica';
+  margin: 40px auto;
+  padding: 20px;
+  color: gray;
 }
 
