--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -10,7 +10,7 @@
         <%= f.input :photo_cache, as: :hidden%>
     </div>
 
-    <%= f.submit "save", class: 'btd'%>
+    <%= f.submit "SAVE", class: 'btd'%>
 
   <% end %>
 
