--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -16,10 +16,13 @@ $lgb: #2F343B;
 }
 
 .btd {
+  font-family: impact;
+  letter-spacing: 2px;
+  font-size: 5vmin;
   width: 100%;
   color: white ;
   text-align: center;
-  padding: 5px 15px;
+  padding: 2px 15px;
   border-radius: 5px;
   background: black;
   box-shadow: 2px 2px 10px $c1;
