--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -30,7 +30,11 @@
   </ul>
 
   <p>
-    <%=link_to "Add a dose", new_dose_path, class:"btd" %>
+    <%=link_to "Add a dose", new_dose_path, class:"btl" %>
+  </p>
+
+  <p>
+    <%=link_to "Edit Cocktail infos", edit_cocktail_path(@cocktail), class:"btl" %>
   </p>
 
 </div>
