--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -23,7 +23,7 @@
         <%= dose.ingredient.name %>, <%= dose.description%>
         <%=link_to "Delete dose", destroy_dose_path(dose),
           method: :delete,
-          data: { confirm: "Are you sure?" }, class:"bta" %>
+          data: { confirm: "Are you sure 😱 ?" }, class:"bta" %>
       </li>
 
     <%end%>
@@ -56,7 +56,7 @@
   <h2>
     <%=link_to "DELETE COCKTAIL", destroy_cocktail_path(@cocktail),
       method: :delete,
-      data: { confirm: "Are you sure?" }, class:"back" %>
+      data: { confirm: "Are you sure 😱 ?" }, class:"back" %>
   <h2>
 
 </div>
