--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,15 +1,26 @@
-<div class="form"><h2>ADD <br> A DOSE.</h2>
-  <%= simple_form_for @dose do |f| %>
-  <%= f.input :description, wrapper_html: { class: 'input' } %>
-  <%= f.association :ingredient, collection: Ingredient.all.order(:name), prompt: "Select an ingredient" %>
-  <%= f.submit "send" %>
-  <% end %>
-</div>
 
-<div id="footer" class="col-xs-12 col-sm-12 col-md-12>"
-  style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
-  url('https://res.cloudinary.com/dytx1bbld/image/upload/v1565343398/rhn9frdzkvmloobcyp1y.jpg')">
+<div class="bg-form"  style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
+  url('https://source.unsplash.com/t7wg7BJU2-s/1600x900')">
+
+
+  <div class="form">
+    <h1>
+        ADD <br> A DOSE.
+    </h1>
+
+    <%= render 'form' %>
+
+  </div>
+  </div>
+
+  <div id="footer" class="col-xs-12 col-sm-12 col-md-12>"
+    style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
+    url('https://res.cloudinary.com/dytx1bbld/image/upload/v1565343428/be7lclbe4zxwsszqxhuz.jpg')">
+
   <h2>
     <%=link_to "BACK TO COCKTAIL", cocktail_path, class:"back" %>
   <h2>
-</div>
+
+  </div>
+
+
