--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -17,7 +17,8 @@ $lgb: #2F343B;
   display: flex;
   h1 {
     font-size: 20vw;
-    font-family: impact;
+    // font-family: impact;
+    font-family: 'Staatliches', cursive;
     font-style: bold;
     align-self: flex-end;
     margin: 0px;
@@ -31,7 +32,8 @@ $lgb: #2F343B;
 }
 
 .title {
-    font-family: impact;
+    // font-family: impact;
+    font-family: 'Staatliches', cursive;
     font-style: bold;
     color: $gb;
     text-align: center;
