--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -16,7 +16,8 @@ $lgb: #2F343B;
 }
 
 .btd {
-  font-family: impact;
+  // font-family: impact;
+  font-family: 'Staatliches', cursive;
   letter-spacing: 2px;
   font-size: 5vmin;
   width: 100%;
