--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -29,7 +29,8 @@ $lgb: #2F343B;
   margin:  50px auto;
   padding: 10px;
   h1 {
-  font-family: impact;
+  // font-family: impact;
+  font-family: 'Staatliches', cursive;
   font-size: 65px;
   line-height: 88%;
   letter-spacing: 2px;
