responsive link to cocktail list

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -44,7 +44,7 @@
   url('<%= cl_image_path @cocktail.photo, height: 300, width: 600, crop: :fill %>')">
 
   <h2>
-    <%=link_to "BACK TO COCKTAIL LIST", cocktails_path, class:"back" %>
+    <%=link_to "BACK TO COCKTAILS", cocktails_path, class:"back" %>
   <h2>
 
 </div>
