--- a/app/views/cocktails/edit.html.erb
+++ b/app/views/cocktails/edit.html.erb
@@ -19,7 +19,7 @@
     url('https://res.cloudinary.com/dytx1bbld/image/upload/v1565343428/be7lclbe4zxwsszqxhuz.jpg')">
 
     <h2>
-      <%=link_to "BACK TO COCKTAILS", cocktails_path, class:"back" %>
+      <%=link_to "BACK TO COCKTAIL", cocktail_path(@cocktail), class:"back" %>
     <h2>
 
   </div>
