--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -7,7 +7,7 @@
 
     <div class="card col-sm-10 col-md-5 col-lg-4 .col-auto"
       style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
-      url('<%= cl_image_path cocktail.photo, height: 200, width: 300, crop: :fill %>')">
+      url('<%= cl_image_path cocktail.photo, height: 200, width: 300, crop: :fill unless cocktail.photo.blank? %>')">
 
       <h3>
         <%= link_to cocktail.name.upcase, cocktail_path(cocktail), class: "card-category" %>
